--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <tbody>
               <!-- I. Name & Job -->
               <tr>
-                <td style="font-family: inherit; padding: 0; vertical-align: top;" valign="top">
+                <td style="font-family: inherit; padding: 7px 0px; vertical-align: top;" valign="top">
                   <strong>
                     <a style="font-family: inherit; color: #333333; font-size: 14pt; text-decoration: none;" 
                        href="mailto:brad@m47rix.com" 
