--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     >
                       <img alt="youtube" 
                             style="width: 18px; height: 18px;" 
-                            src="https://image.ibb.co/kTNREJ/font_awesome_4_7_0_facebook_f_50_0_666666_none.png"
+                            src="https://raw.githubusercontent.com/TheMatrixGroup/gmail-signature/master/youtube.png"
                       >
                     </a>
                   </span>
